Student DTOs, eligibility checks, resume support
Introduce student profile DTOs and response mapping, add eligibility (AFL) checks, and enable resume handling. Changes include: added StudentProfileRequest/StudentProfileResponse DTOs; extended StudentProfile entity (backlogs, phone, graduationYear); ApplicationService now enforces CGPA, backlogs and department eligibility; StudentController updated to use DTOs and return mapped responses, plus resume upload now persists resume URL; ApplicationResponse includes resumeUrl; JobDriveResponse sanitizes allowed departments; Web/Security configs expose /resumes/** and CORS origins; DataSeeder improved to create default admin and seed richer student data; global exception handler covers auth and missing resources; backend .gitignore and project scope docs added; and unit tests for ApplicationService added. Also several README updates and assorted build/test artifacts updated.